Some more commenting. also fixed a problem with the prev makefile.

--- a/litepipe_client/src/application.qrc
+++ b/litepipe_client/src/application.qrc
@@ -1,10 +1,10 @@
 <!DOCTYPE RCC><RCC version="1.0">
 <qresource>
-      <file>editcopy.xpm</file>
-      <file>editcut.xpm</file>
-      <file>filenew.xpm</file>
-      <file>fileopen.xpm</file>
-      <file>editpaste.xpm</file>
-      <file>filesave.xpm</file>
+      <file>images/back_3_48.png</file>
+      <file>images/forward_23_48.png</file>
+      <file>images/ftp_1661_48.png</file>
+      <file>images/gear_24_48.png</file>
+      <file>images/Internet-48.png</file>
+      <file>images/reload_46_48.png</file>
 </qresource>
 </RCC>
